Fix z-index for header

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -153,6 +153,7 @@ header {
     padding: 1rem 5%;
     position: fixed;
     width: 100%;
+    z-index: 99999;
     
     .logo {
       cursor: pointer;
